--- a/lab/pom.xml
+++ b/lab/pom.xml
@@ -100,22 +100,32 @@
                     </dependency>
                 </dependencies>
 
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>mybatis generator</id>-->
+<!--                        <phase>package</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>generate</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            &lt;!&ndash;允许移动生成的文件&ndash;&gt;-->
+<!--                            <verbose>true</verbose>-->
+<!--                            &lt;!&ndash;允许自动覆盖文件&ndash;&gt;-->
+<!--                            <overwrite>true</overwrite>-->
+<!--                            <configurationFile>-->
+<!--                                src/main/resources/generatorConfig.xml-->
+<!--                            </configurationFile>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
                 <executions>
                     <execution>
                         <id>mybatis generator</id>
-                        <phase>package</phase>
+                        <!--<phase>package</phase>-->
+                        <phase>deploy</phase>
                         <goals>
                             <goal>generate</goal>
                         </goals>
-                        <configuration>
-                            <!--允许移动生成的文件-->
-                            <verbose>true</verbose>
-                            <!--允许自动覆盖文件-->
-                            <overwrite>true</overwrite>
-                            <configurationFile>
-                                src/main/resources/generatorConfig.xml
-                            </configurationFile>
-                        </configuration>
                     </execution>
                 </executions>
 
