--- a/lab/src/main/resources/application.properties
+++ b/lab/src/main/resources/application.properties
@@ -7,3 +7,15 @@ mybatis.type-aliases-package=com.se.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 server.port=9094
+
+
+spring.mail.protocol = smtp
+spring.mail.host = smtp.qq.com
+spring.mail.port = 587
+spring.mail.username = 715702687@qq.com
+spring.mail.password = bqejptsklykebdcc
+spring.mail.test-connection = false
+spring.mail.properties.mail.smtp.auth = false
+spring.mail.properties.mail.debug = false
+spring.mail.properties.mail.mime.splitlongparameters = false
+spring.mail.default-encoding = UTF-8
