feat: 上传文件 大小1.6M最多

--- a/lab/src/main/resources/application.properties
+++ b/lab/src/main/resources/application.properties
@@ -8,6 +8,11 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 server.port=9094
 
+## Single file max size  ???????
+#multipart.maxFileSize=50Mb
+## All files max size      ?????????
+#multipart.maxRequestSize=50Mb
+
 
 spring.mail.protocol = smtp
 spring.mail.host = smtp.qq.com
