--- a/lab/src/main/resources/application.properties
+++ b/lab/src/main/resources/application.properties
@@ -8,7 +8,7 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 server.port=9094
 
-## Single file max size  ???????
+## Single files max size  ???????
 #multipart.maxFileSize=50Mb
 ## All files max size      ?????????
 #multipart.maxRequestSize=50Mb
