--- a/lab/src/main/resources/application.properties
+++ b/lab/src/main/resources/application.properties
@@ -24,3 +24,14 @@ spring.mail.properties.mail.smtp.auth = false
 spring.mail.properties.mail.debug = false
 spring.mail.properties.mail.mime.splitlongparameters = false
 spring.mail.default-encoding = UTF-8
+
+
+#spring.freemarker.template-loader-path=classpath:/templates
+#spring.freemarker.cache=false
+#spring.freemarker.charset=UTF-8
+#spring.freemarker.check-template-location=true
+#spring.freemarker.content-type=text/html
+#spring.freemarker.expose-request-attributes=false
+#spring.freemarker.expose-session-attributes=false
+#spring.freemarker.request-context-attribute=request
+#spring.freemarker.suffix=.html
