--- a/lab/pom.xml
+++ b/lab/pom.xml
@@ -81,6 +81,16 @@
             <artifactId>spring-context-support</artifactId>
             <version>5.3.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <!-- json工具 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>LATEST</version>
+        </dependency>
     </dependencies>
 
     <build>
