--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "file-saver": "^2.0.5",
     "js-md5": "^0.7.3",
     "vue": "^2.6.11",
+    "vue-fullcalendar": "^1.0.9",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
