--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-import": "^1.13.3",
     "script-loader": "^0.7.2",
     "vue-template-compiler": "^2.6.11"
   }
